--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Valyrian Translator</title>
-    <link rel="icon" type="image/x-icon" href="throne.png">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="icon" type="image/x-icon" href="throne.png" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>Valyrian Translator</header>
     <div class="form">
-        
-        <label for="input">Enter you text in english and you'll see it in valyrian</label> <br/>
-        <input type="text" id="input" placeholder="Enter your text here.."><br/>
-        <span class="error"></span><br/>
-        <button class = "btn">Translate</button><br/>
+      <label for="input"
+        >Enter you text in english and you'll see it in valyrian</label
+      >
+      <br />
+      <input
+        type="text"
+        id="input"
+        placeholder="Enter your text here.."
+      /><br />
+      <span class="error"></span><br />
+      <button class="btn">Translate</button><br />
     </div>
-        <div class="img">
-            <div><img src="valyrian.png" alt="img"></div>
-            <div class="output">Let me translate it for you..</div>
-        </div>
- 
+
+    <div class="img">
+      <div><img src="valyrian.png" alt="img" /></div>
+      <div class="output">Let me translate it for you..</div>
+    </div>
+
+    <div class="msg">
+      <p>Message: You can get translations upto 5 times.</p>
+    </div>
+
+    <section class="modal hidden">
+      <button class="closeBtn">X</button>
+      <div class="flex">
+        <h3>You can get translations upto 5 times.</h3>
+        <br />
+        <p>Use it wisely.</p>
+      </div>
+    </section>
+    <div class="overlay hidden"></div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
